[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-kr-g2b"
version = "0.1.0"
description = "조달청 나라장터(국가종합전자조달, G2B) OpenAPI를 위한 MCP 서버 - 입찰공고/낙찰/계약/가격/통계 등 공공조달 데이터 분석"
authors = [
    { name = "Changoo Lee", email = "lchangoo@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.2.0",
    "mcp>=1.3.0",
    "pydantic>=2.10.0",
]

[project.urls]
"Homepage" = "https://github.com/ChangooLee/mcp-kr-g2b"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_kr_g2b = ["specs/*.json"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest>=8.0.0",
]
# 의미 기반 리랭커(선택): get_g2b_cache_data 의 rerank_query 사용 시 필요
# pip install "mcp-kr-g2b[ml]"  — torch/transformers 가 함께 설치되어 용량이 큽니다.
ml = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
mcp-kr-g2b = "mcp_kr_g2b.server:main"
